<resources>
    <string name="app_name">Movie Searcher</string>
    <string name="sample_movie_title">Movie Title</string>
    <string name="sample_movie_rating">8.5</string>
    <string name="movie_details">Details</string>
    <string name="sample_movie_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non.</string>
    <string name="movie_comment_hint">Comment</string>
    <string name="movie_invite_menu_title">Invite</string>
    <string name="movie_invite_text">My new app for searching movies</string>
    <string name="movie_like_text">Like</string>
    <string name="change_theme">Change theme</string>
    <string name="quit_app_text">Are you sure you want to exit?</string>
    <string name="quit_cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="favorite_movies_menu_title">Favorite movies</string>
    <string name="empty">Favorites list is empty</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="already_favorite">Already in favorites</string>
    <string name="sample_toolbar_title">Title</string>
    <string name="top_movies_bottom_menu_title">Top</string>
    <string name="favorite_movies_bottom_menu_title">Favorite</string>
    <string name="movies_top_toolbar_title">Top Rated Movies</string>
    <string name="movies_favorite_toolbar_title">Favorite Movies</string>
    <string name="cancel_add_to_favorites">Cancel</string>
    <string name="retry">Retry</string>
    <string name="server_error">Server is temporarily unavailable</string>
</resources>
